<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".ScrollView">

        <ImageView
            android:id="@+id/ImgPrdt1"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="4dp"
            android:scaleType="fitXY"
            android:src="@drawable/abc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/TxtPrdt1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#B0000000"
            android:gravity="bottom|center"
            android:text="Shimla Mirch"
            android:textColor="@color/white"
            android:textSize="25dp"
            app:layout_constraintBottom_toBottomOf="@id/ImgPrdt1"
            app:layout_constraintEnd_toEndOf="@id/ImgPrdt1"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/TxtPrdtQnty1"
            android:gravity="center"
            android:padding="8dp"
            app:layout_constraintTop_toTopOf="@id/ImgPrdt1"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/Btnprdt1"
            android:text="@string/capsicum_40rs_kg"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Btnprdt1"
            android:text="@string/add"
            android:background="@color/teal_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintBottom_toBottomOf="@id/ImgPrdt1"
            android:layout_marginBottom="5dp"
            />
        <ImageView
            android:id="@+id/ImgPrdt2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="4dp"
            android:scaleType="fitXY"
            android:src="@drawable/def"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/ImgPrdt1" />

        <TextView
            android:id="@+id/TxtPrdt2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#B0000000"
            android:gravity="bottom|center"
            android:text="Potatoes"
            android:textColor="@color/white"
            android:textSize="25dp"
            app:layout_constraintBottom_toBottomOf="@id/ImgPrdt2"
            app:layout_constraintEnd_toEndOf="@id/ImgPrdt2"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/TxtPrdtQnty2"
            android:gravity="center"
            android:padding="8dp"
            app:layout_constraintTop_toTopOf="@id/ImgPrdt2"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/Btnprdt2"
            android:text="@string/potatoes_40rs_kg"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Btnprdt2"
            android:text="@string/add"
            android:background="@color/teal_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintBottom_toBottomOf="@id/ImgPrdt2"
            android:layout_marginBottom="5dp"
            />

        <ImageView
            android:id="@+id/ImgPrdt3"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="4dp"
            android:scaleType="fitXY"
            android:src="@drawable/ghi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/ImgPrdt2" />

        <TextView
            android:id="@+id/TxtPrdt3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#B0000000"
            android:gravity="bottom|center"
            android:text="Brocolli"
            android:textColor="@color/white"
            android:textSize="25dp"
            app:layout_constraintBottom_toBottomOf="@id/ImgPrdt3"
            app:layout_constraintEnd_toEndOf="@id/ImgPrdt3"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/TxtPrdtQnty3"
            android:gravity="center"
            android:padding="8dp"
            app:layout_constraintTop_toTopOf="@id/ImgPrdt3"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/Btnprdt3"
            android:text="@string/brocolli_25rs_kg"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Btnprdt3"
            android:text="@string/add"
            android:background="@color/teal_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintBottom_toBottomOf="@id/ImgPrdt3"
            android:layout_marginBottom="5dp"
            />
        <ImageView
            android:id="@+id/ImgPrdt4"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="4dp"
            android:scaleType="fitXY"
            android:src="@drawable/lemon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/ImgPrdt3" />

        <TextView
            android:id="@+id/TxtPrdt4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#B0000000"
            android:gravity="bottom|center"
            android:text="Lemon"
            android:textColor="@color/white"
            android:textSize="25dp"
            app:layout_constraintBottom_toBottomOf="@id/ImgPrdt4"
            app:layout_constraintEnd_toEndOf="@id/ImgPrdt4"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/TxtPrdtQnty4"
            android:gravity="center"
            android:padding="8dp"
            app:layout_constraintTop_toTopOf="@id/ImgPrdt4"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/Btnprdt4"
            android:text="@string/lemon_10_rs_kg"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Btnprdt4"
            android:text="@string/add"
            android:background="@color/teal_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintBottom_toBottomOf="@id/ImgPrdt4"
            android:layout_marginBottom="5dp"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>